# Data.Structures.And.Algorithms.Tutorial

./: README.md
array/: README.md
array/recipe-01/: README.md
array/recipe-01/cxx/: arrays.hpp  test_arrays.cpp
array/recipe-01/cxx-std-array/: test_array.cpp
array/recipe-01/python/: test_arrays.py
evaluating_postfix_expressions/: README.md
evaluating_postfix_expressions/blog/: IFEvaluatorModel_format_flow.drawio  IFEvaluatorView_flow.drawio  README.md  evaluate_class.drawio  evaluate_interaction.drawio
evaluating_postfix_expressions/blog/python/: IFEvaluatorModel.py  IFEvaluatorView.py  IFToPFConverter.py  IFToPFConverterModel.py  PFEvaluator.py  PFEvaluatorModel.py  PFEvaluatorView.py  Scanner.py  Token.py  scanner.py
evaluating_postfix_expressions/blog/python-ply/: IFToPFConverter.py  PFEvaluatorModel.py  Scanner.py  evaluatorapp.py
evaluating_postfix_expressions/cxx/BigNumber/: .gitignore
evaluating_postfix_expressions/recipe-01/: README.md
evaluating_postfix_expressions/recipe-01/cxx/: CMakeLists.txt  Makefile  evaluatorapp.cpp  model.hpp  print.hpp  tokens.hpp  tokens_test.cpp
evaluating_postfix_expressions/recipe-01/cxx-bignumber/: CMakeLists.txt  Makefile  tokens.hpp
evaluating_postfix_expressions/recipe-01/cxx-variant/: Makefile  model.hpp  scanner.hpp  tokens.hpp  tokens_test.cpp
evaluating_postfix_expressions/recipe-01/python-ply/: scanner.py
evaluating_postfix_expressions/recipe-02/: README.md
evaluating_postfix_expressions/recipe-02/cxx-variant/: CMakeLists.txt  model.hpp  tokens.hpp
evaluating_postfix_expressions/recipe-03/: README.md
evaluating_postfix_expressions/recipe-03/cxx-bignumber/: BigNumber  CMakeLists.txt  Makefile  model.hpp  print.hpp  scanner.hpp  tokens.hpp
evaluating_postfix_expressions/recipe-04/: README.md
evaluating_postfix_expressions/recipe-05/: README.md
evaluating_postfix_expressions/recipe-06/: README.md
linked_directed_graph/: README.md
linked_directed_graph/recipe-02/: README.md
linked_directed_graph/recipe-02/python/: view.py  (+2 more)
linked_directed_graph/recipe-03/: README.md
linked_undirected_graph/recipe-01/: README.md
linked_undirected_graph/recipe-02/: README.md
queue/: README.md
queue/arrayqueue/: README.md
queue/recipe-01/: README.md
queue/recipe-02/: README.md
selection_tree/benchmark/: n_way_merge.cpp  n_way_merge_heap.cpp
selection_tree/winner_tree/: README.md
stack/: README.md
stack/adapter/: README.md
stack/arraystack/: README.md
stack/linkedstack/: README.md
stack/recipe-01/: README.md
stack/recipe-02/: README.md
stack/recipe-03/: README.md
(+225 files in other folders)
